# J3DUltra

./: .gitignore  .gitmodules  CMakeLists.txt  vcpkg.json
J3D/: J3DTEVTokens.hpp
include/GX/: GXEnum.hpp  GXStruct.hpp
include/J3D/: J3DBlock.hpp  J3DData.hpp  J3DFragmentShaderGenerator.hpp  J3DJoint.hpp  J3DLight.hpp  J3DMaterial.hpp  J3DMaterialData.hpp  J3DMaterialFactory.hpp  J3DMaterialFactoryV2.hpp  J3DMaterialFactoryV3.hpp  J3DModelData.hpp  J3DModelInstance.hpp  J3DModelLoader.hpp  J3DNameTable.hpp  J3DNode.hpp  J3DRenderPacket.hpp  J3DRendering.hpp  J3DShaderGenerator.hpp  J3DShape.hpp  J3DShapeFactory.hpp  J3DTEVTokens.hpp  J3DTextureFactory.hpp  J3DTransform.hpp  J3DUniformBufferObject.hpp  J3DUtil.hpp  J3DVertexData.hpp  J3DVertexShaderGenerator.hpp
include/J3D/Animation/: J3DAnimationInstance.hpp  J3DAnimationKey.hpp  J3DAnimationLoader.hpp  J3DBaseAnimation.hpp  J3DColorAnimationInstance.hpp  J3DDiscreteAnimationTrack.hpp  J3DHermiteAnimationTrack.hpp  J3DJointAnimationInstance.hpp  J3DJointFullAnimationInstance.hpp  J3DShapeVisibilityAnimation.hpp  J3DTexIndexAnimationInstance.hpp  J3DTexMatrixAnimationInstance.hpp  J3DVisibilityAnimationInstance.hpp
include/J3D/Data/: J3DBlock.hpp  J3DModelData.hpp  J3DModelInstance.hpp
include/J3D/Geometry/: J3DShape.hpp  J3DShapeFactory.hpp  J3DVertexData.hpp
include/J3D/Material/: J3DFragmentShaderGenerator.hpp  J3DMaterial.hpp  J3DMaterialData.hpp  J3DMaterialFactoryV2.hpp  J3DMaterialFactoryV3.hpp  J3DMaterialTable.hpp  J3DMaterialTableLoader.hpp  J3DShaderGeneratorCommon.hpp  J3DTEVTokens.hpp  J3DUniformBufferObject.hpp  J3DVertexShaderGenerator.hpp
include/J3D/Picking/: J3DPicking.hpp  J3DPickingShaders.hpp
include/J3D/Rendering/: J3DLight.hpp  J3DRenderPacket.hpp  J3DRendering.hpp
include/J3D/Skeleton/: J3DEnvelope.hpp  J3DJoint.hpp  J3DNode.hpp  J3DSkeleton.hpp
include/J3D/Texture/: J3DTexture.hpp  J3DTextureFactory.hpp  J3DTextureLoader.hpp
include/J3D/Util/: J3DUtil.hpp
lib/glad/src/: gl.c
lib/libpng/: CMakeLists.txt
lib/png++/: error.hpp
res/shaders/: debug_normalcolors.frag  debug_normalcolors.vert
src/J3D/: J3DBlock.cpp  J3DData.cpp  J3DFragmentShaderGenerator.cpp  J3DJoint.cpp  J3DMaterial.cpp  J3DMaterialData.cpp  J3DMaterialFactory.cpp  J3DMaterialFactoryV2.cpp  J3DMaterialFactoryV3.cpp  J3DModelData.cpp  J3DModelInstance.cpp  J3DModelLoader.cpp  J3DNameTable.cpp  J3DRenderPacket.cpp  J3DRendering.cpp  J3DShaderGenerator.cpp  J3DShaderGeneratorCommon.cpp  J3DShape.cpp  J3DShapeFactory.cpp  J3DTexture.cpp  J3DTextureFactory.cpp  J3DTransform.cpp  J3DUniformBufferObject.cpp  J3DUtil.cpp  J3DVertexData.cpp  J3DVertexShaderGenerator.cpp
src/J3D/Animation/: J3DAnimationInstance.cpp  J3DAnimationKey.cpp  J3DAnimationLoader.cpp  J3DColorAnimationInstance.cpp  J3DDiscreteAnimationTrack.cpp  J3DHermiteAnimationTrack.cpp  J3DJointAnimationInstance.cpp  J3DJointFullAnimationInstance.cpp  J3DShapeVisibilityAnimation.cpp  J3DTexIndexAnimationInstance.cpp  J3DTexMatrixAnimationInstance.cpp  J3DVisibilityAnimationInstance.cpp
src/J3D/Data/: J3DBlock.cpp  J3DData.cpp  J3DModelData.cpp  J3DModelInstance.cpp
src/J3D/Geometry/: J3DShape.cpp  J3DShapeFactory.cpp  J3DVertexData.cpp
src/J3D/Material/: J3DFragmentShaderGenerator.cpp  J3DMaterial.cpp  J3DMaterialData.cpp  J3DMaterialFactoryV2.cpp  J3DMaterialFactoryV3.cpp  J3DMaterialTable.cpp  J3DMaterialTableLoader.cpp  J3DShaderGeneratorCommon.cpp  J3DUniformBufferObject.cpp  J3DVertexShaderGenerator.cpp
src/J3D/Picking/: J3DPicking.cpp
src/J3D/Rendering/: J3DRenderPacket.cpp  J3DRendering.cpp
src/J3D/Skeleton/: J3DJoint.cpp  J3DSkeleton.cpp
(+7 files in other folders)
